Оплата по карте APPROVED

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 plugins {
     id 'java'
+    id("io.qameta.allure") version "2.12.0"
+    id("io.freefair.lombok") version "8.11"
 }
 
 group = 'ru.netology'
 version = '1.0-SNAPSHOT'
+tasks.named('test') {
+    finalizedBy 'allureReport' // Запускаем отчет после тестов
+}
 
+allure {
+    version = '2.20.1'
+    useJUnit5 {
+        version = '2.20.1'
+    }
+}
 repositories {
     mavenCentral()
 }
@@ -12,8 +23,34 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    testCompileOnly 'org.projectlombok:lombok:1.18.32'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.postgresql:postgresql:42.6.0'
+
+    testImplementation 'org.testng:testng:7.7.1'
+    implementation 'com.codeborne:selenide:6.16.0'
+    testImplementation 'io.rest-assured:rest-assured:5.2.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
+    implementation 'commons-dbutils:commons-dbutils:1.7'
+
+    implementation 'io.github.bonigarcia:webdrivermanager:5.7.0'
+    testImplementation 'io.qameta.allure:allure-junit5:2.20.1'
+
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    def dbUrl = System.getProperty('dbUrl', 'jdbc:mysql://localhost:3306/app') // Значение по умолчанию
+    systemProperty 'db.url', dbUrl
+    systemProperty 'db.user', System.getProperty('db.user', "app")
+    systemProperty 'db.password', System.getProperty('db.password', "pass")
 }
